--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <div class="contents">
         <h3 class="section-title">１.事業領域</h3>
         <div class="contents-item">
-          <img src="image_01">
+          <img src="image_01.jpg">
           <p>人材開発</p>
         </div>
         <div class="contents-item">
-          <img src="image_02">
+          <img src="image_02.jpg">
           <p>組織開発</p>
         </div>
         <div class="contents-item">
-          <img src="image_03">
+          <img src="image_03.jpg">
           <p>コミュニティデザイン</p>
         </div>
         <div class="contents-item">
-          <img src="image_04">
+          <img src="image_04.jpg">
           <p>サービスデザインコンサルティング</p>
         </div>
         <br clear="left">
