--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div class="header-list">
         <ul>
           <li>経歴</li>
+          <li>事業領域</li>
           <li>受講動機</li>
+          <li>プログラミング経験</li>
           <li>学んでいること</li>
           <li>つくりたいもの</li>
         </ul>
@@ -20,37 +22,38 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1>名前：柳瀬浩之</h1>
+        <img src="image_top.jpg">
+        <h1>柳瀬 浩之</h1>
         <h2>
           筑波大学体育専門学群卒。経営コンサルティング会社、外資系スポーツアパレルブランドの日本総代理店の営業、教育・採用コンサルティング会社を経て独立。ファシリテーターとして企業の人材開発、組織開発、アセッサーとして管理職の昇進昇格アセスメントに携わる。現在、株式会社ビータップ設立し、代表取締役に就任。岐阜県出身。学生時代は野球一筋。
         </h2>
       </div>
 
     <div class="contents">
-        <h3 class="section-title">１.事業領域</h3>
+        <h3 class="section-title"><span>１.&nbsp;</span>事業領域</h3>
         <div class="contents-item">
-          <img src="image_01.jpg">
+          <img src="image_01.jpg"　hight="300" width="225">
           <p>人材開発</p>
         </div>
         <div class="contents-item">
-          <img src="image_02.jpg">
+          <img src="image_02.jpg"　hight="300" width="225">
           <p>組織開発</p>
         </div>
         <div class="contents-item">
-          <img src="image_03.jpg">
+          <img src="image_03.jpg"　hight="300" width="225">
           <p>コミュニティデザイン</p>
         </div>
         <div class="contents-item">
-          <img src="image_04.jpg">
-          <p>サービスデザインコンサルティング</p>
+          <img src="image_04.jpg"　hight="300" width="225">
+          <p>サービスデザイン</p>
         </div>
         <br clear="left">
-        <h3 class="section-title" >２.受講動機</h3>
-          <p>コロナで研修の稼働がなくなったことで、時間ができたので、未来のことを考えてみました。アフターコロナで社会が変わるのであれば「せっかくなら面白いことを仕掛けていく側に回ろう」と決意し、どうすべきか考えたところ、Protoutを受講させていただくことにしました。自分から仕掛けていける技術を学んで、アフターコロナに向けて、どんどん仕掛けていこうと思っています。</p>
+        <h3 class="section-title" ><span>２.&nbsp;</span>受講動機</h3>
+          <p>コロナで研修の稼働がなくなったことで、時間ができたので、未来のことを考えてみました。アフターコロナで社会が変わるのであれば「せっかくなら面白いことを仕掛けていく側に回ろう」と決意し、受講させていただくことにしました。プロトタイピング技術を学んで、アフターコロナに向けて、どんどん仕掛けていこうと思っています。</p>
 
-        <h3 class="section-title">３.プログラミング経験</h3>
-          <p>プログラミング経験はほぼなし。Progateやその他の学習ツールで少し学んだことがある程度です。最近、漫画「王様のヴァイキング」を読んで、ハッカーに憧れております。ハッカーになる気はありませんが。</p>
-        <h3 class="section-title">４.現在学んでいること</h3>
+        <h3 class="section-title"><span>３.&nbsp;</span>プログラミング経験</h3>
+          <p>プログラミング経験はほぼなし。Progateやその他の学習ツールで少し学んだ程度です。最近、漫画「王様のヴァイキング」を読んで、ハッカーに憧れております。ハッカーになる気はありませんが。</p>
+        <h3 class="section-title"><span>４.&nbsp;</span>現在学んでいること</h3>
           <ul>
             <li>UXデザイン</li>
             <li>編集</li>
@@ -60,7 +63,7 @@
             など。
           </ul>
 
-        <h3 class="section-title">５.つくりたいもの</h3>
+        <h3 class="section-title"><span>５.&nbsp;</span>つくりたいもの</h3>
           <ul>
             <li>オンライン研修を効果的に運営するWEBツール</li>
             <li>個別最適の学習AIツール</li>
